<resources>
    <string name="app_name">Photo Assistant</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_title">Login</string>
    <string name="auth_submit">Enter</string>
    <string name="auth_field_hint_email">Email:</string>
    <string name="auth_field_hint_password">Password:</string>
    <string name="location_entry_name">條目：</string>
    <string name="location_entry_unit"> 項</string>
    <string name="longitude">經度：</string>
    <string name="latitude">緯度：</string>
    <string name="go_to_map">Go to map</string>
    <string name="entry_item_unit">項</string>
    <string name="entry_condition_name">條件</string>
    <string name="entry_edit_title">Title</string>
    <string name="entry_edit_hint">input here</string>
    <string name="entry_edit_condition">Condition</string>
    <string name="entry_edit">條目編輯</string>
    <string name="save">儲存</string>
    <string name="cancel">取消</string>
    <string name="entry_edit_subtitle">Subtitle</string>
    <string name="input_validation_failure_msg">Input validation failure</string>
</resources>
