<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.login.LoginActivity">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textSize="36sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/login_email"
        android:layout_marginBottom="30dp"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textSize="28sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_field_hint_email"
        app:layout_constraintBottom_toTopOf="@id/login_email"
        app:layout_constraintStart_toStartOf="@id/login_email"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_field_hint_password"
        app:layout_constraintBottom_toTopOf="@id/login_password"
        app:layout_constraintStart_toStartOf="@id/login_password"
        />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="80dp"
        android:autofillHints="email" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_email"
        android:layout_marginTop="30dp"
        android:autofillHints="password"
        />

    <Button
        android:id="@+id/login_submit"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/auth_submit"
        app:layout_constraintTop_toBottomOf="@id/login_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>