<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_background"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/location_detail_title_linear_layout"
            android:layout_width="411dp"
            android:layout_height="80dp"
            android:maxHeight="130dp"
            android:minWidth="60dp"
            android:orientation="horizontal"
            android:padding="5pt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/location_detail_title"
                android:layout_width="0pt"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:padding="10dp"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/location_detail_subtitle"
                android:layout_width="0pt"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:padding="10dp"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"

                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/location_detail_title_linear_layout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/location_detail_lon_lat_layout"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                >

                <TextView
                    android:id="@+id/longitude_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/location_detail_longitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/longitude_string"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <TextView
                    android:id="@+id/latitude_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude"
                    app:layout_constraintTop_toBottomOf="@id/longitude_string"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/location_detail_latitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/latitude_string"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <ImageButton
                android:id="@+id/location_detail_map_button"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/go_to_map" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_location_detail_activity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="3dp">

    </androidx.fragment.app.FragmentContainerView>
</LinearLayout>